--- a/DanceLayers/README
+++ b/DanceLayers/README
@@ -1,5 +1,13 @@
 dance_layers is a simple python 2 / 3 program to suggest combinations of three dance elements to try layering on each other
 
+
+TO RUN AS AN APP
+- To run this dev server, run the following command from the DanceLayers/DanceLayers folder
+    FLASK_APP=dance_layers_app.py flask run
+- visit http://127.0.0.1:5000/ to see suggested move
+
+
+TO RUN AT COMMAND LINE
 - Run as "python dance_layers.py <file_name>"" where file_name is a json file stored in the same folder of the format 
 {
     "body part 1": [
@@ -15,5 +23,4 @@ dance_layers is a simple python 2 / 3 program to suggest combinations of three d
 
 
 TO DO
-- Write a front end so it can be more widely used
 - Make switching off 'START_WITH_FEET' easier
